Fix logo alignment and nav margin in carrinho.css
Removed incorrect margin-top property and added justify-content to logo.

--- a/carrinho.css
+++ b/carrinho.css
@@ -26,8 +26,6 @@ body{
     nav {
         width: 100%;
         height: 8rem;
-        margin-top: 0 auto;
-
           background-color: rgb(192, 18, 18);
           }
     
@@ -35,6 +33,7 @@ body{
             display: flex;
             height: 6rem;
             align-items: center;
+             justify-content: center;
             padding-top: 1.5rem;
             margin-left: 18.1rem;
          }
